# flashcards

./: .gitignore  Cargo.toml  Trunk.toml
assets/: index.css  index.html
src/: local_storage.rs  main.rs  routes.rs  speech_synthesis.rs
src/components/: app.rs  context.rs  learning_set.rs  mod.rs  navigation.rs  not_found.rs  root.rs  settings.rs  snackbar.rs  training.rs
src/components/common/: button.rs  dialog.rs  dropdown.rs  file.rs  form.rs  mod.rs  page.rs
src/model/: flashcard.rs  learning_set.rs  mod.rs  settings.rs  training.rs
