[package]
name = "flashcards"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
gloo = "0.11.0"
implicit-clone = "0.4.9"
serde = { version = "1.0.203", features = ["serde_derive", "rc"] }
serde_json = "1.0.117"
ulid = "1.1.2"
wasm-bindgen = "0.2.92"
yew = { version = "0.21.0", features = ["csr"] }
yew-autoprops = "0.4.1"
yew-router = "0.18.0"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "HtmlAnchorElement",
    "SpeechSynthesis",
    "Window",
    "SpeechSynthesisVoice",
    "SpeechSynthesisUtterance",
    "DataTransfer"
]
